[tool.poetry]
name = "starlink-geoip-data"
version = "0.1.0"
description = ""
authors = ["clarkzjw <i@jinwei.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
pycountry = "^26.2.16"
numpy = "^2.1.2"
brokenaxes = "^0.6.2"
pandas = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
